force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Course_Series__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Series</label>
    <referenceTo>skilljar__Course_Series__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>