force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Credit_Value__c</fullName>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>