force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>