force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Description__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>