force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Price__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>