force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Published_Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Published_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published Course</label>
    <referenceTo>skilljar__Published_Course__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>