force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Sku__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Sku__c</fullName>
    <label>Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>