force-app/main/default/objects/skilljar__Offer__c/fields/skilljar__Type__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PUBLISHED_COURSE</fullName>
            </value>
            <value>
                <fullName>DOMAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>